@startuml
Application o-- FXMLController
FXMLController o-- ListItem
FXMLController o-- AddItemDialogBox
AddItemDialogBox o-- ListItem
FXMLController o-- DeleteItemDialogBox
DeleteItemDialogBox o-- ListItem
FXMLController o-- SaveDialogBox
SaveDialogBox o-- ListItem
FXMLController o-- DatePickerTableCell

class SaveDialogBox {
-ObservableList<ListItem> observableTodoList
-File file
-Button cancelButton
-TextField filePathDisplay
+void setTodoList(List<ListItem> todoList)
-void chooseFile()
-void closeDialogBox()
-void saveListsToFile()
}

class DeleteItemDialogBox {
-ObservableList<ListItem> observableTodoList
-TableView<ListItem> listTable
-Button cancelButton
-ComboBox<ListItem> itemChoiceBox
+void setUpDialogBox(List<ListItem> todoList, TableView<ListItem> listTable)
-void closeDialogBox()
-void removeItem()
}

class AddItemDialogBox {
-ObservableList<ListItem> observableTodoList
-TableView<ListItem> listTable
-Button cancelButton
-TextField descriptionField
-DatePicker datePicker
+void setUpDialogBox(List<ListItem> todoList, TableView<ListItem> listTable)
+void initialize()
-void closeDialogBox()
-void createItem()
}

class FXMLController {
-{static} final String STYLES_CSS_URI_STRING
-final ObservableList<ListItem> observableTodoList
-TableColumn<ListItem, String> descriptionCol
-TableColumn<ListItem, LocalDate> dueDateCol
-TableView<ListItem> listTable
+void initialize()
~void openAddItemDialogBox()
~void openDeleteItemDialogBox()
~void openLoadDialogBox()
~void openSaveDialogBox()
-void overwriteListTable(ObjectInputStream o)
}

class Application {
+void start(Stage stage)
}

class ListItem {
-{static} final long serialVersionUID = 1
-{static} final transient int MAX_DESC_LENGTH = 256
-String description
-LocalDate dueDate
+void setDescription(String description)
+void setDueDate(Calendar dueDate)
+String getDescriptionOfItem()
+Calendar getDueDateOfItem()
+String toString()
}

class DatePickerTableCell {
-DatePicker datePicker
-final ObservableList<ListItem> observableTodoList
+void updateItem(LocalDate item, boolean empty)
+void createDatePicker()
+void cancelEdit()
}
@enduml